[PN-15705] feat: added missing configs and updated commitId of timeline-service and data-vault